# electricui-embedded

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  electricui.c  electricui.h  eui_config.h  eui_macro.h  eui_serial_transport.c  eui_serial_transport.h  keywords.txt  library.properties
Examples/Hello_Electric/: Hello_Electric.ino
Examples/electric_ws2812/: electric_ws2812.ino
examples/: README.md
src/: electricui.c  electricui.h  electricui_private.h  eui.c  eui.h  eui_config.h  eui_macro.h  eui_serial_transport.c  eui_types.h  eui_utilities.c  eui_utilities.h
src/transports/: eui_binary_transport.c  eui_binary_transport.h  eui_serial_transport.c  eui_serial_transport.h  eui_transport_types.h
src/utilities/: eui_crc.c  eui_crc.h  eui_macro.h  eui_offset_validation.c  eui_offset_validation.h
test/: arduino-example-test.sh  lint_checks.sh  project.yml  setup_tests.sh  valgrind_on_tests.sh
test/fuzz/: afl-eui.c  makefile
test/test/: test_electricui_auto_interface.c  test_electricui_findobject.c  test_electricui_internalcallbacks.c  test_electricui_manual_interface.c  test_electricui_multiple_interface.c  test_electricui_parse_packet.c  test_electricui_send_message.c  test_electricui_send_packet.c  test_electricui_send_tracked.c  test_electricui_send_untracked.c  test_eui_macro.c  test_eui_serial_transport_cobs.c  test_eui_serial_transport_crc16.c  test_eui_serial_transport_decoder.c  test_eui_serial_transport_encoder.c  test_eui_serial_transport_header_bytes.c  (+1 more)
tests/: README.md  arduino-example-test.sh  makefile
tests/runners/: eui_tests.c  (+3 more)
(+51 files in other folders)
